# ComfyUI-Event-Equality-Core

./: .gitignore  CHANGELOG.md  FORMULA_INTEGRITY.md  HOMEPAGE_DESCRIPTION.md  LICENSE  README.md  VERSION  __init__.py  nodes.py  pyproject.toml  requirements.txt  sync_to_comfy.ps1
adapters/: __init__.py
adapters/wan/: __init__.py  wan_adapter.py  wan_report.py
core/: __init__.py  cascade.py  conflict.py  enums.py  event_sampler.py  execution.py  memory.py  orchestrator.py  packet.py  projection.py  prompt_strategy.py  relation.py  signal.py  sstate.py  telemetry.py
readers/: __init__.py  base.py  conditioning_reader.py  delta_reader.py  image_reader.py  latent_reader.py  noise_reader.py  text_reader.py
reports/: __init__.py  markdown_report.py
resolvers/: __init__.py  operator_registry.py  role_resolver.py  s_resolver.py
utils/: __init__.py  frozen_helpers.py  ids.py  tensor_stats.py
web/: event_horizon_cascade_ui.js  event_horizon_cascade_ui_v2.js  singularity_cascade_ui_v2.js
