[project]
name = "comfyui-singularity"
description = "Singularity: Wan I2V cascade frame selection, same-run continuation, stitched video output, and runtime diagnostics for ComfyUI."
version = "0.1.1-r59"
license = { text = "MIT" }
dependencies = []

[tool.comfy]
PublisherId = "diiiua"
DisplayName = "Singularity"
Icon = ""


