[project]
name = "comfyui-singularity"
description = "Singularity: Tail 5 Continuation Gate, same-run Wan I2V cascade continuation, stitched video output, UI-safe pause panel, and runtime diagnostics for ComfyUI."
version = "0.1.1-r178"
license = { text = "MIT" }
dependencies = []

[tool.comfy]
PublisherId = "diiiua"
DisplayName = "Singularity"
Icon = ""



